syntax = "proto3";

option go_package = "./grpc";

// The service definition.
service GRPC {
  // Sends a greeting
  rpc SubscribeMessage (MessageRequest) returns (stream MessageReply) {}
  rpc SendMessage (SendRequest) returns (SendReply) {}
}

// The request message containing the user's name.
message MessageRequest {
  string type = 1;
}

// The response message containing the greetings
message MessageReply {
  string message = 1;
}

// The request message containing the user's name.
message SendRequest {
  string name = 1;
}

// The response message containing the greetings
message SendReply {
  string message = 1;
}

// Command
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc.proto